--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.2.0",
+    "firebase": "^9.22.1",
     "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
