--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,11 +1,17 @@
 {
-  "short_name": "TaWES",
   "name": "TreatAsthma Weather Experience System",
+  "short_name": "TaWES",
+  "theme_color": "#000000",
+  "background_color": "#000000",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "icons": [
     {
-      "src": "TaWES_icon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "maskable_icon.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "TaWES192.png",
@@ -13,13 +19,19 @@
       "sizes": "192x192"
     },
     {
+      "src": "TaWES256.png",
+      "type": "image/png",
+      "sizes": "256x256"
+    },
+    {
+      "src": "TaWES384.png",
+      "type": "image/png",
+      "sizes": "384x384"
+    },
+    {
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
